图片上传知乎图床

--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -12,7 +12,7 @@
 
 两位作者都对间隔重复系统在知识传授方面的应用抱有极大的期望和信心。
 
-这篇长文对间隔重复的抽认卡系统指出了新的方向：将记忆系统嵌入到富含知识的文本中，让记忆成为读者的一种选择，而非偶然。
+这篇长文对基于抽认卡的间隔重复系统指出了新的方向：将系统嵌入到富含知识的文本中，让记忆成为读者的一种选择，而非偶然。
 
 翻译水平十分有限，欢迎指出错误。
 
@@ -46,7 +46,7 @@
 
 出于实验目的，我们开发了「[量子国度](https://quantum.country/)」这个网站，旨在探索一种解释量子计算和量子力学的新方法。表面上看，量子国度和那些介绍这些主题的传统文章没什么两样——有文字，有说明，有方程。下面是一个内容摘录：
 
-![Screenshot depicting prose and math in Quantum Country, typical of a technical essay.](https://numinous.productions/ttft/assets/quantum_country_sample-2x.png)
+![Screenshot depicting prose and math in Quantum Country, typical of a technical essay.](https://pic4.zhimg.com/80/v2-cd5936072a0d3abf4091244d8e67ecb6.png)
 
 不过这和那些传统文章还是有很大区别的。「量子国度」实际上是一种新的助记媒介的原型。在我们的设想中，使用了助记媒介，用户能不费吹灰之力地记住他们读过的内容。听上去似乎不可能实现，但其依据是认知科学家已经对人类存储长期记忆的机制有了相当多的了解，实际上并非遥不可及。认知科学家们所了解的事实基本上可以提炼成一个可操作的清单：按照里面的步骤，你可以记住任何你想要记的东西。[^Mass Point 4]
 
@@ -60,7 +60,7 @@ https://www.zhihu.com/zvideo/1377723672250126336
 
 值得注意的是这种互动发生在文章本身的文本中。下面是一个放大视图，你可以看到这些问题是如何被文本上下包围的：
 
-![Screenshot depicting the interactive quiz interleaved in a few paragraphs of prose.](.assets/qc_zoom_out-2x.png)
+![Screenshot depicting the interactive quiz interleaved in a few paragraphs of prose.](https://pic4.zhimg.com/80/v2-82625a4f056dca4eef7d252b00ef8788.png)
 
 这个包含了一对问题和答案的界面叫做**卡片**。
 
@@ -78,7 +78,7 @@ https://www.zhihu.com/zvideo/1377724466940706816
 
 尽管「量子国度」尚处于早期阶段，但我们已经能看到一些助记媒介产生的影响。下图是助记文章中每个用户回答的实证留存与每个问题的复习次数的散点图：
 
-![Graph depicting exponentially-rising demonstranted retention](.assets/dem_retention-2x.png)
+![Graph depicting exponentially-rising demonstranted retention](https://pic4.zhimg.com/80/v2-292b3879208e9771d736bcccd5fa0783.png)
 
 这张图需要稍微解释一下。图中纵轴的卡片「实证留存天数」是指正确回答该问题与上一次回答该问题之间的最长时间。具体来说，考虑一下横轴上的数字 6。在这一点上的用户都已经复习了文章中所有的 112 张卡片 6 次。纵轴显示的是所有卡片的实证留存天数，每个蓝点代表一个复习了 6 次的用户。
 
@@ -284,7 +284,7 @@ SRM 系统在语言学习中的应用最为广泛。比如多邻国宣称他们[
 
 这个愿望是针对任何认真制造变革性思想工具的团队的。这是为了创造一种文化，将现代产品实践的最佳部分与（非常不同的）现代研究文化的最佳部分相结合。你需要一个贯穿始终的循环来运作，通过这个循环，对被试的深刻的、原创的见解反馈来改变和完善这个系统，而系统的改变会导致对被试的深刻的、原创的见解。
 
-![Diagram: 	'insight' and 'making', pointing to each other in a loop](.assets/insight_through_making.svg)
+![Diagram: 	'insight' and 'making', pointing to each other in a loop](https://pic4.zhimg.com/80/v2-af2ad23ee027559a39c8636397fd6671.png)
 
 请注意，我们不是在做一个常见的论点，即制造新的工具可以为工具制造商带来新的主题见解，反之亦然。这是对的，但比我们说的要弱得多。相反，制造新的工具可以**为整个人类**带来新的主题见解（即重要的原创性研究见解），反之亦然，而这最好是一个快速转动的循环，以开发最具变革性的工具。
 
@@ -324,25 +324,25 @@ https://www.bilibili.com/video/BV1rs411x7sb
 
 创造这样媒介很有挑战性。许多慕课平台已经做了一些尝试。典型的方法是在真人出镜讲解的无聊视频中穿插少量测试题[^26]。下图描述了慕课平台 Coursera 如何使用这种方法：
 
-![Figure depicting images of a 'talking head' lecture, alternating with dry, text-based multiple choice questions](.assets/mnemonic_video_edx_sequence-2x.png)
+![Figure depicting images of a 'talking head' lecture, alternating with dry, text-based multiple choice questions](https://pic4.zhimg.com/80/v2-4d3decc9523c4e65395fa8eea3bc4578.png)
 
 其他慕课在细节上有所不同。但其整体的情感体验可以总结为：
 
-![Graph highlighting the sharp affective transitions between the lectures and the very low affect questions](.assets/mnemonic_video_edx_graph-2x.png)
+![Graph highlighting the sharp affective transitions between the lectures and the very low affect questions](https://pic4.zhimg.com/80/v2-a1fae5a205d4e36e768dc3639ee180f1.png)
 
 这些视频中，可能有一些高质量的部分在情感上引人入胜，虽说他们也很难像最优秀的视频那样充分发挥情感潜力，构建情感联系，比如 Grant Sanderson 等人的视频。但整体情感体验毫不连贯，令人敬而远之。那么，有没有可能创造一种融合情感与知识的媒介，提供统一而精心打造的情感与智力体验？最理想化的话，是否能创造如下的体验？
 
-![Hypothetical graph depicting smoother affective transitions and higher overall affect](.assets/mnemonic_video_hypothetical_graph-2x.png)
+![Hypothetical graph depicting smoother affective transitions and higher overall affect](https://pic4.zhimg.com/80/v2-0d0c79b83713f0c517a24d0cae7ccee6.png)
 
 在慕课平台中，问题通常脱离了上下文，显得很枯燥。但是在助记视频中，叙述者会解释所研究的问题为何重要，为什么用户看完视频会受益，这些内容都融入在整体叙述中。做得好的话——比如配有合适的音乐，语调适当地急促或调皮——它将让观者感到迫切相关。同时可以调整视频播放器，以便用户直接回答问题，作为间隔重复体验的一部分。如此改造便能让在情感充沛的主要叙述和情感中性的问题之间的过渡会柔和得多。
 
 下面我们简述一种实现上述效果的方法[^27]，展现了叙述者如何在整体叙述中适时提问而不显唐突：
 
-![Image](.assets/v2-3a7edacd0a5d0c02b1e8b8e520d907af.png)
+![Image](https://pic4.zhimg.com/80/v2-3a7edacd0a5d0c02b1e8b8e520d907af.png)
 
-![Image](.assets/v2-7a1884be7223c7a002ea2b0c0a93168d.png)
+![Image](https://pic4.zhimg.com/80/v2-7a1884be7223c7a002ea2b0c0a93168d.png)
 
-![Image](.assets/v2-371288d0a1824ce0e4cedd96c5e23497.png)
+![Image](https://pic4.zhimg.com/80/v2-371288d0a1824ce0e4cedd96c5e23497.png)
 
 助记视频的节奏很可能与助记文章大不相同，尤其是问题的频率和密度会比助记媒介低。与此同时，有必要测试不同的节拍和节奏，以平衡情感和智力体验。情感充沛的视频通常也有比较平静的时刻；他们之所以能有效激发情感，一部分是因为有这些低情感强度的时刻作对比。想一想，一部好的动作电影或惊悚片也有些平淡片段。内容一直都是高情感强度的话，观众的情感反馈也会减弱。设计助记视频时，可以让其中的问题充当低情感强度的节拍。
 
