--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -241,7 +241,7 @@ SRM 系统在语言学习中的应用最为广泛。比如多邻国宣称他们[
 
 （顺便提一下，有很多人说他们对间隔重复记忆系统感到「厌恶」，或者用一些类似的强烈字眼。他们的论点通常是：据说间隔重复系统有助于记忆；如果这是真的，我**必须**使用这些系统；但我讨厌使用这些系统。他们的反应是否认论证的第一步。当然，错误在其他地方：绝对没有理由任何人「应该」使用这种系统，即使它们对记忆有帮助。讨厌使用它们的人应该简单地选择不这样做。使用记忆系统并不是一种道德上的要求！)
 
-关于记忆与掌握的关系，已经有了大量的研究。这些研究中的大部分都是详细的、针对具体环境的。但是在更广泛的结论层面上，有一个特别有趣的系列研究是由 Herbert Simon 和他的合作者在 1970 年代完成的。他们研究了国际象棋选手，并发现当国际象棋高手看国际象棋的局面时，他们不会从单个棋子的角度来看，这里有车，那里有兵。相反，在多年的对局和分析中，棋手们学会了识别 25,000 到 100,000 种棋子的模式。这些更复杂的「组块」是棋子的组合，棋手认为它们是一个整体，并且能够在比单个棋子更高的抽象水平上进行推理。至少在某种程度上，正是认识和推理这些棋子的能力使他们的棋艺比新手好得多。此外，尽管西蒙是在国际象棋的背景下做的这项工作，但随后的研究在其他专业领域也发现了[类似的结果](https://en.wikipedia.org/wiki/Chunking_(psychology))[^22]。虽然需要进一步研究，但似乎是有道理的，助记媒介可以帮助加速获得这些组块的内容，从而获得掌握。
+关于记忆与掌握的关系，已经有了大量的研究。这些研究中的大部分都是详细的、针对具体环境的。但是在更广泛的结论层面上，有一个特别有趣的系列研究是由 Herbert Simon 和他的合作者在 1970 年代完成的。他们研究了国际象棋选手，并发现[^22]当国际象棋高手看国际象棋的局面时，他们不会从单个棋子的角度来看，这里有车，那里有兵。相反，在多年的对局和分析中，棋手们学会了识别 25,000 到 100,000 种棋子的模式。这些更复杂的「组块」是棋子的组合，棋手认为它们是一个整体，并且能够在比单个棋子更高的抽象水平上进行推理。至少在某种程度上，正是认识和推理这些棋子的能力使他们的棋艺比新手好得多。此外，尽管西蒙是在国际象棋的背景下做的这项工作，但随后的研究在其他专业领域也发现了[类似的结果](https://en.wikipedia.org/wiki/Chunking_(psychology))[^23]。虽然需要进一步研究，但似乎是有道理的，助记媒介可以帮助加速获得这些组块的内容，从而获得掌握。
 
 那么，这一切是否意味着我们是死记硬背的粉丝，就像普通学校里那种强迫的记忆？
 
