机翻中 如何写出好的提示：利用间隔重复来创造理解

--- a/Essays/如何写出好的提示：利用间隔重复来创造理解.md
+++ b/Essays/如何写出好的提示：利用间隔重复来创造理解.md
@@ -12,7 +12,7 @@ December 2020
 
 - The central role of retrieval practice 检索练习的核心角色
   - Properties of effective retrieval practice prompts 有效检索练习提示的性质
-- A recipe for chicken stock 鸡汤的食谱
+- A recipe for chicken stock 鸡汤的菜谱
 - Factual knowledge 事实性知识
   - Simple facts 简单的事实
   - Lists 列表
@@ -65,7 +65,7 @@ If a prompt “works,” it’s because performing that task changes you in some
 
 The most common mechanism of change for spaced repetition learning tasks is called *retrieval practice.* In brief: when you attempt to recall some knowledge from memory, the act of retrieval tends to reinforce those memories.[^3] You’ll forget that knowledge more slowly. With a few retrievals strategically spaced over time, you can effectively halt forgetting. The physical mechanisms are not yet understood, but hundreds of cognitive scientists have explored this effect experimentally, reproducing the central findings across various subjects, knowledge types (factual, conceptual, procedural, motor), and testing modalities (multiple choice, short answer, oral examination).
 
-间隔重复学习任务最常见的改变机制被称为*提取练习。*简而言之：当你试图从记忆中回忆一些知识时，提取的行为往往会强化这些记忆。你会更慢地忘记这些知识。通过在一段时间内有策略地间隔几次检索，您可以有效地阻止遗忘。物理机制尚不清楚，但数百名认知科学家已经通过实验探索了这一效应，他们在不同的学科、知识类型(事实、概念、程序、运动)和测试方式(选择题、简答题、口试)上重现了中心发现。
+间隔重复学习任务最常见的改变机制被称为**提取练习**。简而言之：当你试图从记忆中回忆一些知识时，提取的行为往往会强化这些记忆。你会更慢地忘记这些知识。通过在一段时间内有策略地间隔几次检索，您可以有效地阻止遗忘。物理机制尚不清楚，但数百名认知科学家已经通过实验探索了这一效应，他们在不同的学科、知识类型(事实、概念、程序、运动)和测试方式(选择题、简答题、口试)上重现了中心发现。
 
 The value of fluent recall isn’t just in memorizing facts. Many of these experiments tested students not with parroted memory questions but by asking them to make inferences, draw concept maps[^4], or answer open-ended questions. In these studies, improved recall translated into improved general understanding and problem-solving ability.
 
@@ -73,7 +73,7 @@ The value of fluent recall isn’t just in memorizing facts. Many of these exper
 
 *Retrieval* is the key element which distinguishes this effective mode of practice from typical study habits. Simply *reminding* yourself of material (for instance by re-reading it) yields much weaker memory and problem-solving performance. The learning produced by retrieval is called the “testing effect” because it occurs when you explicitly test yourself, reaching within to recall some knowledge from the tangle of your mind. Such tests look like typical school exams, but in some sense they’re the opposite: retrieval practice is about testing your knowledge to *produce* learning, rather than to assess learning.
 
-“提取”是这种有效的练习方式与典型的学习习惯相区别的关键因素。简单地“提醒”自己一些材料(比如重读)会让你的记忆力和解决问题的能力变得更弱。提取产生的学习被称为“测试效应”，因为它发生在你显性地测试自己的时候，从内心去回忆你头脑中纠结的一些知识。这类考试看起来像典型的学校考试，但从某种意义上说，它们恰恰相反：检索练习是为了测试你的知识来“产生”学习，而不是评估学习。
+**提取**是这种有效的练习方式与典型的学习习惯相区别的关键因素。简单地“提醒”自己一些材料(比如重读)会让你的记忆力和解决问题的能力变得更弱。提取产生的学习被称为“测试效应”，因为它发生在你显性地测试自己的时候，从内心去回忆你头脑中纠结的一些知识。这类考试看起来像典型的学校考试，但从某种意义上说，它们恰恰相反：检索练习是为了测试你的知识来**产生**学习，而不是评估学习。
 
 Spaced repetition systems are designed to facilitate this effect. If you want prompts to reinforce your understanding of some topic, you must learn to write prompts which collectively invoke retrieval practice of all the key details.
 
@@ -85,11 +85,11 @@ We’ll have to step outside the scientific literature to understand how to writ
 
 This guide is an example of what Michael Nielsen and I have called a *mnemonic medium*[^5]. It exemplifies its own advice through spaced repetition prompts interleaved directly into the text. If you’re reading this, you’ve probably already used a spaced repetition system. This guide’s system, [Orbit](https://withorbit.com/), works similarly[^6]. But it has a deeper aspiration: by integrating expert-authored prompts into the reading experience, authors can write texts which readers can deeply internalize with relatively little effort. If you’re an author, then, this guide may help you learn how to write good prompts both for your personal practice and also for publications you write using [Orbit](https://withorbit.com/). You can of course read this guide without answering the embedded prompts, but I hope you’ll give it a try.
 
-本指南是Michael Nielsen和我所称的*助记媒介*的一个例子。它通过直接插入到文本中的间隔重复提示来举例说明自己的建议。如果你正在阅读这篇文章，你可能已经使用过间隔重复系统。本指南的系统[Orbit](https://withorbit.com/)，的工作原理与此类似。但它还有一个更深层次的愿望：通过将专家撰写的提示整合到阅读体验中，作者可以写出读者可以相对较少的努力就能深刻内化的文本。如果您是一名作者，那么本指南可能会帮助您学习如何为您的个人实践和您使用[Orbit](https://withorbit.com/).)撰写的出版物编写良好的提示。当然，您可以阅读本指南，而不需要回答嵌入的提示，但我希望您能试一试。
+本指南是 Michael Nielsen 和我所称的**助记媒介**的一个例子。它通过直接插入到文本中的间隔重复提示来举例说明自己的建议。如果你正在阅读这篇文章，你可能已经使用过间隔重复系统。本指南的系统 [Orbit](https://withorbit.com/) 的工作原理与此类似。但它还有一个更深层次的愿望：通过将专家撰写的提示整合到阅读体验中，作者可以写出读者可以相对较少的努力就能深刻内化的文本。如果您是一名作者，那么本指南可能会帮助您学习如何为您的个人实践和您使用 [Orbit](https://withorbit.com/)。撰写的出版物编写良好的提示。当然，您可以阅读本指南，而不需要回答嵌入的提示，但我希望您能试一试。
 
 These embedded prompts are part of an ongoing research project. The first experiment in the mnemonic medium was *[Quantum Country](https://quantum.country/)*, a primer on quantum computation. Quantum Country is concrete and technical: definitions, notation, laws. By contrast, this guide mostly presents heuristics, mental models, and advice. The embedded prompts therefore play quite different roles in these two contexts. You may not need to memorize precise definitions here, but I believe the prompts will help you internalize the guide’s ideas and put them into action. On the other hand, this guide’s material may be too contingent and too personal to benefit from author-provided prompts. It’s an experiment, and I invite you to [tell me about your experiences](mailto:andy@andymatuschak.org).
 
-这些嵌入的提示是正在进行的研究项目的一部分。在助记介质中的第一个实验是*[量子国](https://quantum.country/)*，这是量子计算的入门读物。量子国是具体的和技术的：定义、符号、定律。相比之下，本指南主要介绍启发式、心智模型和建议。因此，嵌入式提示在这两个上下文中扮演着截然不同的角色。你可能不需要在这里记住准确的定义，但我相信这些提示会帮助你内化指南的想法并将其付诸实践。另一方面，本指南的材料可能过于偶然和过于个人化，无法从作者提供的提示中获益。这是一个实验，我邀请你[告诉我你的经历](邮件地址：Andy@andymatuschak.org)。
+这些嵌入的提示是正在进行的研究项目的一部分。在助记介质中的第一个实验是《[量子国](https://quantum.country/)》，这是量子计算的入门读物。量子国是具体的和技术的：定义、符号、定律。相比之下，本指南主要介绍启发式、心智模型和建议。因此，嵌入式提示在这两个上下文中扮演着截然不同的角色。你可能不需要在这里记住准确的定义，但我相信这些提示会帮助你内化指南的想法并将其付诸实践。另一方面，本指南的材料可能过于偶然和过于个人化，无法从作者提供的提示中获益。这是一个实验，我邀请你[告诉我你的经历](邮件地址：Andy@andymatuschak.org)。
 
 One important limitation is worth noting. This guide describes how to write prompts which produce and reinforce understandings of your own, going beyond what the author explicitly provides. Orbit doesn’t yet offer readers the ability to remix author-provided prompts or add their own. Future work will expand the system in that direction.
 
@@ -125,7 +125,7 @@ Retrieval practice prompts should produce **consistent** answers, lighting the s
 
 检索练习提示应该产生**一致**的答案，每次执行任务时都会亮起相同的灯泡。否则，你可能会遇到一种被称为“提取诱导遗忘”的干扰现象：你在练习中记住的东西会得到加强，但你没有记住的其他相关知识实际上是被抑制的。现在，有一种有用的提示类型，每次重复都会产生新的答案，但这种提示利用了不同的变化理论。我们稍后将在本指南中简要讨论它们。
 
-Retrieval practice prompts should be **tractable**. To avoid interference-driven churn and recurring annoyance in your review sessions, you should strive to write prompts which you can almost always answer correctly. This often means breaking the task down, or adding cues.[^[8]()]
+Retrieval practice prompts should be **tractable**. To avoid interference-driven churn and recurring annoyance in your review sessions, you should strive to write prompts which you can almost always answer correctly. This often means breaking the task down, or adding cues.[^8]
 
 检索练习提示应该**易于处理**。为了避免在复习过程中因干扰而造成的混乱和反复出现的烦恼，你应该努力写出你几乎总是能正确回答的提示语。这通常意味着将任务分解，或者添加线索。
 
@@ -145,23 +145,39 @@ So we must learn two skills to write effective retrieval practice prompts: how t
 
 因此，要写出有效的检索练习提示，我们必须学习两项技能：如何准确地描述我们要强化的知识，以及如何提出问题来强化这些知识。
 
-## A recipe for chicken stock 鸡汤的食谱
+## A recipe for chicken stock 鸡汤的菜谱
 
 Our discussion so far has been awfully abstract. We’ll continue by analyzing a concrete example: a recipe for chicken stock.
 
+到目前为止，我们的讨论非常抽象。我们将继续分析一个具体的例子：鸡汤菜谱。
+
 A recipe may seem like a fairly trivial target for prompt-writing, and in some sense that’s true. It’s a conveniently short and self-contained example. But in fact, my spaced repetition library contains hundreds of prompts capturing foundational recipes, techniques, and observations from the kitchen. This is itself an essential prompt-writing skill to build—noticing unusual but meaningful applications for prompts—so I’ll briefly describe my experience.
+
+菜谱看起来似乎是提示性写作的一个微不足道的目标，从某种意义上说，这是真的。这是一个简短而自成体系的例子。但事实上，我的间隔重复图书馆包含数百条提示，捕捉厨房里的基本菜谱、技术和观察。这本身就是一项基本的提示符编写技能-注意不寻常但有意义的提示符应用程序-所以我将简要描述我的经历。
 
 I’d cooked fairly seriously for about a decade before I began to use spaced repetition, and of course I naturally internalized many core techniques and ratios. Yet whenever I was making anything complex, I’d constantly pause to consult references, which made it difficult to move with creativity and ease. I rarely felt “flow” while cooking. My experiences felt surprisingly similar to my first few years learning to program, in which I encountered exactly the same problems. With years of full-time attention, I automatically internalized all the core knowledge I needed day-to-day as a programmer. I’m sure that I’d eventually do the same in the kitchen, but since cooking has only my part-time attention, the process might take a few more decades.
 
+在我开始使用间隔重复之前，我已经相当认真地烹饪了大约十年，当然，我自然而然地内化了许多核心技术和比例。然而，每当我做任何复杂的事情时，我都会不断地停下来查阅参考资料，这使得我很难有创造力和自如地移动。我做饭时很少感到“心流”。我的经历与我最初几年学习编程的感觉惊人地相似，当时我遇到了完全相同的问题。经过多年的全职关注，我自动地内化了我作为一名程序员日常所需的所有核心知识。我确信，我最终也会在厨房里做同样的事情，但由于烹饪只是我的兼职工作，这个过程可能还需要几十年的时间。
+
 I started writing prompts about core cooking knowledge three years ago, and it’s qualitatively changed my life in the kitchen. These prompts have accelerated my development of a deeply satisfying ability: to show up at the market, choose what looks great in that moment, and improvise a complex meal with confidence. If the sunchokes look good, I know they’d pair beautifully with the mustard greens I see nearby, and I know what else I need to buy to prepare those vegetables as I imagine. When I get home, I already know how to execute the meal; I can move easily about the kitchen, not hesitating to look something up every few minutes. Despite what this guide’s lengthy discussion might suggest, these prompts don’t take me much time to write. Every week or two I’ll trip on something interesting and spend a few minutes writing prompts about it. That’s been enough to produce a huge impact.
+
+三年前，我开始写关于烹饪核心知识的提示，这从本质上改变了我在厨房的生活。这些提示加速了我一种令人深感满意的能力的发展：出现在市场上，选择那一刻看起来很棒的东西，自信地即兴准备一顿复杂的饭菜。如果向日葵看起来不错，我知道它们会和我在附近看到的芥菜很好地搭配，我还知道我还需要买什么来准备我想象中的那些蔬菜。回到家，我已经知道如何做饭了；我可以很容易地在厨房里走动，每隔几分钟就毫不犹豫地查一查。尽管这本指南的冗长讨论可能暗示了什么，但这些提示并不需要我花太多时间来写。每隔一两周，我就会被一些有趣的事情绊倒，然后花几分钟写一些关于它的提示。这足以产生巨大的影响。
+
+<hr>
 
 At a decent restaurant, even simple foods often taste much better than most home cooks’ renditions. Sautéed vegetables seem richer; grains seem richer; sauces seem more luscious. One key reason for this is *stock*, a flavorful liquid building block. Restaurants often use stocks in situations where home cooks might use water: adding a bit of steam to sautéed vegetables, thinning a purée, simmering whole grains, etc. Stocks are also the base of many sauces, soups, and braises.
 
+在一家像样的餐厅，即使是简单的食物也往往比大多数家庭厨师的菜肴好吃得多。炒蔬菜看起来更浓郁；谷物看起来更浓郁；酱汁看起来更甘美。其中一个关键原因是“库存”，这是一种味道鲜美的液体积木。餐馆经常在家庭厨师可能用水的情况下使用库存：在炒蔬菜时加一点蒸气，稀释果酱，炖全麦等等。库存也是许多调味汁、汤和炖菜的基础。
+
 Stock is made by simmering flavorful ingredients in water. By varying the ingredients, we can produce different types of stock: chicken stock, vegetable stock, mushroom stock, pork stock, and so on. But unlike a typical broth, stock isn’t meant to have a distinctive flavor that can stand on its own. Instead, its job is to provide a versatile foundation for other preparations.
+
+高汤是用水炖调味料制成的。通过不同的配料，我们可以生产不同类型的高汤：鸡汤、蔬菜高汤、蘑菇高汤、猪肉高汤等等。但与典型的肉汤不同，高汤并不意味着有一种可以独立存在的独特味道。相反，它的工作是为其他准备工作提供一个多才多艺的基础。
 
 One of the most useful stocks is chicken stock. When used to prepare vegetables, chicken stock doesn’t make them taste like chicken: it makes them taste more savory and complete. It also adds a luxurious texture because it’s rich in gelatin from the chicken bones. Chicken stock takes only a few minutes of active time to make, and in a typical kitchen, it’s basically free: the primary ingredient is chicken bones, which you can naturally accumulate in your freezer if you cook chicken regularly.
 
-### Recipe
+最有用的菜谱之一是鸡肉菜谱。当用来准备蔬菜时，鸡汤并不会让它们吃起来像鸡肉：它会让它们吃起来更美味、更完整。它还增加了奢华的质地，因为它含有丰富的鸡骨明胶。制作鸡汤只需要几分钟的活跃时间，在典型的厨房里，它基本上是免费的：主要配料是鸡骨，如果你经常煮鸡肉，你可以自然地把鸡骨堆积在冰箱里。
+
+### Recipe 菜谱
 
 - 2lbs (~1kg) chicken bones
 - 2qt (~2L) water
@@ -171,20 +187,39 @@ One of the most useful stocks is chicken stock. When used to prepare vegetables,
 - 4 cloves garlic, smashed
 - half a bunch of fresh parsley
 
+- 2磅(~1千克)鸡骨。
+- 2QT(~2L)水。
+- 1个洋葱，粗略切碎。
+- 2个胡萝卜，粗略切碎。
+- 2根芹菜肋骨，粗略切碎。
+- 4瓣大蒜，捣碎。
+- 半串新鲜的欧芹。
+
 1. Combine all the ingredients in a large pot.
 2. Bring to a simmer on low heat (this will take about an hour). We use low heat to produce a bright, clean flavor: at higher temperatures, the stock will both taste and look duller.
 3. Lower heat to maintain a bare simmer for an hour and a half.
 4. Strain, wait until cool, then transfer to storage containers.
 
+1. 把所有配料放在一个大锅里。
+2. 用小火炖(这需要大约一个小时)。我们使用低热来产生明亮、干净的味道：在较高的温度下，汤的味道和看起来都会变得暗淡。
+3. 降低火候，保持一个半小时的裸炖。
+4. 过滤，等待冷却，然后转移到储存容器中。
+
 Chicken stock will keep for a week in the fridge or indefinitely in the freezer. There will be a cap of fat on the stock; skim that off before using the stock, and deploy the fat in place of oil or butter in any savory cooking situation.
+
+鸡肉库存可以在冰箱里保存一周，也可以在冰箱里无限期保存。高汤上会有一层脂肪；在使用高汤之前把它刮掉，然后在任何美味的烹饪情况下把脂肪放在油或黄油的位置上。
 
 This recipe can be scaled up or down to the quantity of chicken bones you have. The basic ratio is a pound of bones to a quart of water. The vegetables are flexible in choice and ratio.
 
-### Variations
+这个食谱可以根据你的鸡骨数量来放大或缩小。基本比例是一磅骨头对一夸脱水。蔬菜的选择和比例都很灵活。
+
+### Variations 变体
 
 For a more French flavor profile, replace the celery with leeks and add any/all of bay leaves, black peppercorns, and thyme. For a deeper flavor, roast the bones and vegetables first to make what’s called a “brown chicken stock” (the recipe above is for a “white chicken stock,” which is more delicate but also more versatile).
 
-### What to do with chicken stock
+为了更具法式风味，可以用韭菜代替芹菜，加入月桂叶、黑胡椒和百里香。为了更深层次的味道，先把骨头和蔬菜烤成所谓的“棕色鸡汤”（上面的食谱是用来做“白鸡汤”的，它更细腻，但也更多样）。
+
+### What to do with chicken stock 如何处理鸡汤
 
 A few ideas for what you might do with your chicken stock:
 
@@ -192,6 +227,15 @@ A few ideas for what you might do with your chicken stock:
 - Purée with roasted vegetables to make soup.
 - Wilt hearty greens like kale, chard, or collards in oil, then add a bit of stock and cover to steam through.
 - After roasting or pan-searing meat, deglaze the pan with stock to make a quick sauce.
+
+下面是一些如何处理鸡汤的建议:
+
+- 用它来煮大麦，farro, couscous和其他谷物。
+- Purée用烤蔬菜做汤。
+- 将羽衣甘蓝、甜菜或羽衣甘蓝等蔬菜放入油中枯萎，然后加入少许高汤，盖上盖子蒸透。
+- 在烤肉或用平底锅煎肉之后，把平底锅上的高汤去釉，快速做成酱汁。
+
+<hr>
 
 To organize our efforts, it’s helpful to ask: what would it mean to “know” this material? I’d suggest that someone who “knows” this material should:
 
@@ -201,67 +245,53 @@ To organize our efforts, it’s helpful to ask: what would it mean to “know”
 - know some ways one might use chicken stock, both generally and with some specific examples
 - know of a few common variations and when they might be used
 
+为了组织我们的努力，我们可以问："了解 "这个材料意味着什么？我认为，"了解 "这个材料的人应该。
+
+- 知道如何制作和储存鸡汤
+- 知道什么是鸡汤，并（至少是浅显地）理解为什么和什么时候它很重要
+- 知道鸡汤的作用和意义，特别是
+- 知道使用鸡汤的一些方法，包括一般的和一些具体的例子
+- 知道一些常见的变化以及何时可以使用它们
+
 Some of this knowledge is factual; some of it is procedural; some of it is conceptual. We’ll see strategies for dealing with each of these types of knowledge.
+
+这些知识中有些是事实性的；有些是程序性的；有些是概念性的。我们将看到处理这些类型的知识的策略。
 
 But understanding is inherently personal. Really “knowing” something often involves going beyond what’s on the page to connect it to your life, other ideas you’re exploring, and other activities you find meaningful. We’ll also look at how to write questions of that kind.
 
+但理解本质上是个人的。真正 "了解 "某件事情往往需要超越书本上的内容，将其与你的生活、你正在探索的其他想法以及你认为有意义的其他活动联系起来。我们还将研究如何撰写这类问题。
+
 In this guide, we’ll imagine that you’re an interested home cook who’s never made stock before. Naturally, if you’re an experienced cook, you’d probably need only a few of these prompts. And of course, if you don’t cook at all, you’d write none of these prompts! Try to read the examples as demonstrations of how you might internalize a resource deeply without much prior fluency.[^10]
+
+在本指南中，我们会设想你是一个有兴趣的家庭厨师，以前从未做过股票。自然，如果你是一个有经验的厨师，你可能只需要这些提示中的几个。当然，如果你根本不做饭，你也就不会写这些提示了 试着把这些例子看成是对你如何在事先没有太多流畅性的情况下深入内化一项资源的演示[^10] 。
 
 To demonstrate a wide array of principles, we’ll treat this material quite exhaustively. But it’s worth noting that in practice, you usually won’t study resources as systematically as this. You’ll jump around, focusing only on the parts which seem most valuable. You may return to a resource on a few occasions, writing more prompts as you understand what’s most relevant. That’s good! Exhaustiveness may seem righteous in a shallow sense, but an obsession with completionism will drain your gumption and waste attention which could be better spent elsewhere. We’ll return to this issue in greater depth later.
 
-## How to make and store chicken stock: factual and procedural knowledge
+为了证明一系列广泛的原则，我们将相当详尽地处理这些材料。但值得注意的是，在实践中，你通常不会像这样系统地学习资源。你会跳来跳去，只关注那些看起来最有价值的部分。你可能会在几个场合回到一个资源，在你了解最相关的内容时写更多的提示。这很好! 从浅显的意义上讲，穷尽似乎是正确的，但对完成主义的痴迷会耗尽你的魄力，浪费本可以更好地用于其他方面的注意力。我们以后会更深入地讨论这个问题。
 
-### Chicken stock
-
-At a decent restaurant, even simple foods often taste much better than most home cooks’ renditions. Sautéed vegetables seem richer; grains seem richer; sauces seem more luscious. One key reason for this is *stock*, a flavorful liquid building block. Restaurants often use stocks in situations where home cooks might use water: adding a bit of steam to sautéed vegetables, thinning a purée, simmering whole grains, etc. Stocks are also the base of many sauces, soups, and braises.
-
-Stock is made by simmering flavorful ingredients in water. By varying the ingredients, we can produce different types of stock: chicken stock, vegetable stock, mushroom stock, pork stock, and so on. But unlike a typical broth, stock isn’t meant to have a distinctive flavor that can stand on its own. Instead, its job is to provide a versatile foundation for other preparations.
-
-One of the most useful stocks is chicken stock. When used to prepare vegetables, chicken stock doesn’t make them taste like chicken: it makes them taste more savory and complete. It also adds a luxurious texture because it’s rich in gelatin from the chicken bones. Chicken stock takes only a few minutes of active time to make, and in a typical kitchen, it’s basically free: the primary ingredient is chicken bones, which you can naturally accumulate in your freezer if you cook chicken regularly.
-
-### Recipe
-
-- 2lbs (~1kg) chicken bones
-- 2qt (~2L) water
-- 1 onion, roughly chopped
-- 2 carrots, roughly chopped
-- 2 ribs of celery, roughly chopped
-- 4 cloves garlic, smashed
-- half a bunch of fresh parsley
-
-1. Combine all the ingredients in a large pot.
-2. Bring to a simmer on low heat (this will take about an hour). We use low heat to produce a bright, clean flavor: at higher temperatures, the stock will both taste and look duller.
-3. Lower heat to maintain a bare simmer for an hour and a half.
-4. Strain, wait until cool, then transfer to storage containers.
-
-Chicken stock will keep for a week in the fridge or indefinitely in the freezer. There will be a cap of fat on the stock; skim that off before using the stock, and deploy the fat in place of oil or butter in any savory cooking situation.
-
-This recipe can be scaled up or down to the quantity of chicken bones you have. The basic ratio is a pound of bones to a quart of water. The vegetables are flexible in choice and ratio.
-
-### Variations
-
-For a more French flavor profile, replace the celery with leeks and add any/all of bay leaves, black peppercorns, and thyme. For a deeper flavor, roast the bones and vegetables first to make what’s called a “brown chicken stock” (the recipe above is for a “white chicken stock,” which is more delicate but also more versatile).
-
-### What to do with chicken stock
-
-A few ideas for what you might do with your chicken stock:
-
-- Cook barley, farro, couscous and other grains in it.
-- Purée with roasted vegetables to make soup.
-- Wilt hearty greens like kale, chard, or collards in oil, then add a bit of stock and cover to steam through.
-- After roasting or pan-searing meat, deglaze the pan with stock to make a quick sauce.
+## How to make and store chicken stock: factual and procedural knowledge 如何制作和储存鸡汤：事实和程序性的知识
 
 We’ll begin with the “recipe” section of this passage, which describes how to make and store chicken stock. It’s interesting to contrast this section’s text with the more conceptual initial paragraphs. As a form, recipes already involve a somewhat more explicit knowledge structure than you’d find in ordinary prose. This will give us a bit of a scaffold to get started.
 
+我们将从这段话的 "食谱 "部分开始，它描述了如何制作和储存鸡汤。将这一部分的文字与更多的概念性的初始段落进行对比是很有意思的。作为一种形式，菜谱已经涉及到比你在普通散文中发现的更明确的知识结构。这将给我们提供一个开始的脚手架。
+
 To know how to make chicken stock, you must know what ingredients to collect. We’ll begin there.
+
+要知道如何制作鸡汤，你必须知道要收集哪些原料。我们就从这里开始。
 
 This type of knowledge is mostly *factual*. There aren’t a lot of concepts or relationships here: it’s mostly just a bunch of raw information you need to know.
 
-### Simple facts
+这种类型的知识主要是*事实*。这里没有太多的概念或关系：它主要是一堆你需要知道的原始信息。
+
+### Simple facts 简单的事实
 
 We could write a prompt which simply asks: “What do you need to make chicken stock?” But this isn’t *precise* enough: should we recall the quantities or just the names of the ingredients? How much chicken stock are we making? This isn’t *focused* enough: because it’s asking for so many details simultaneously, it’s unlikely to sharply activate all the memories you want to reinforce. And because it’s asking for so much, it’s liable to lead to *inconsistency* and *intractability*: each time you answer, you’ll remember some details and forget others. The inconsistent activations will tend to erode your memory.
 
+我们可以写一个提示，简单地问一下。"你需要什么来制作鸡汤？" 但这还不够*准确：我们应该回忆一下数量还是只回忆一下原料的名称？我们要做多少鸡汤？这还不够*集中：因为它同时要求这么多细节，所以不太可能急剧激活你想强化的所有记忆。而且，因为它要求的东西太多，所以很容易导致*不一致*和*不稳定*：每次你回答的时候，你会记住一些细节，而忘记其他细节。不一致的激活将倾向于侵蚀你的记忆。
+
 We’ll need to break the ingredients list down into the elements which must actually be learned.
+
+我们需要把成分表分解成实际上必须学习的要素。
 
 The first line is about the chicken component. If you’d never heard of stock before, you could begin by simply clarifying what kind of chicken we use:
 
@@ -269,7 +299,15 @@ The first line is about the chicken component. If you’d never heard of stock b
 >
 > A. Bones.
 
+第一行是关于鸡肉的成分。如果你以前从未听说过高汤，你可以先简单地澄清我们使用的是哪种鸡肉。
+
+> 问：高汤用的是什么类型的鸡肉部分？
+>
+> 答：骨头。
+
 This question focuses on just one detail. It’s precise about what it wants (“What type of chicken parts…?”), and it should produce a consistent answer over time. It’s plenty tractable, but it still demands the effort of retrieving the answer from memory.
+
+这个问题只集中在一个细节上。它对它想要的东西很精确（"什么类型的鸡肉部分......"），而且它应该在一段时间内产生一个一致的答案。这个问题很容易解决，但是它仍然需要努力从记忆中检索出答案。
 
 Writing a simple factual prompt like that naturally tickles a neighbor you might consider adding: the *explanation* prompt. I write prompts like this when a detail seems likely to be challenging or when the explanation itself is interesting. A more experienced cook likely wouldn’t bother with the first question, but they might still find this one useful.
 
