--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -98,7 +98,7 @@ https://www.zhihu.com/zvideo/1377724466940706816
 
 另一位在量子计算领域有着丰富经验的用户这样[写到](https://news.ycombinator.com/item?id=19429035)：
 
-> 我是量子信息/计算方面的博士，在读这篇文章之前我已经知晓文章中的所有内容，但通过做给定的间隔重复抽认卡，我获得了了额外的感悟，这大大提升了我对材料的理解。每个正在阅读这篇文章的人，都应该去量子国度注册并尝试一下间隔重复记忆法。
+> 我是量子信息/计算方面的博士，在读这篇文章之前我已经知晓文章中的所有内容，但通过做给定的间隔重复抽认卡，我获得了额外的感悟，这大大提升了我对材料的理解。每个正在阅读这篇文章的人，都应该去量子国度注册并尝试一下间隔重复记忆法。
 
 另一位刚接触量子计算的用户告诉我们，「量子国度是他所能想象的介绍这门学科的最佳方式」。当我们问到他如何学以致用时，他说，当他公司的一位来宾举办关于量子计算的技术研讨会时，他原本预计会在大约 10 分钟后会不知所云。然而：
 
